SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/Ocean_EMR_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Account_Name__c</fullName>
        <label>AWS Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMR_Request_ID__c</fullName>
        <displayFormat>OCEAN-EMR-{00000}</displayFormat>
        <label>EMR Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_EC2_Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hadoop_Distribution__c</fullName>
        <label>Hadoop Distribution</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_EMR_Hadoop_Distribution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instance_Quantity__c</fullName>
        <label>Instance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <label>Instance Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_EMR_Instances_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean_EMR_Requests</relationshipLabel>
        <relationshipName>Ocean_EMR_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uptime_DaysMonth__c</fullName>
        <label>Uptime (Days/Month)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uptime_HoursDay__c</fullName>
        <label>Uptime (Hours/Day)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wave_Submitted__c</fullName>
        <label>Wave Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ocean_EMR_Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EMR_Request_ID__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Application__c</columns>
        <columns>Wave_Submitted__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <columns>AWS_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Ocean_EMR_Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean_EMR_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>